# rust-rest-api

./: .gitignore  Cargo.toml
resources/: application.yaml  log4rs.yaml  messages_en.properties  messages_id.properties  private  public
src/: lib.rs  main.rs
src/config/: app.rs  mod.rs  pg_conn.rs  setting.rs
src/configs/: app.rs  db.rs  log.rs  logging.rs  mod.rs  pg_conn.rs  rsa_crypt.rs  setting.rs
src/controllers/: user_controller.rs
src/handlers/: user.rs
src/middlewares/: auth.rs  db.rs  language.rs  log.rs  log_std.rs  logging.rs  mod.rs
src/models/: mod.rs
src/models/dto/: user.rs
src/models/entity/: mod.rs  user_master.rs
src/repositories/: mod.rs  user.rs  user_repo.rs
src/repositories/db/: mod.rs  user.rs  user_repo_db.rs
src/router/: user.rs
src/routes/: api.rs
src/services/: user.rs  user_service.rs
src/utils/: api_response.rs  context.rs  error.rs  messages.rs  mod.rs
