[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
chrono = {version = "0.4.39", features = ["serde"]}
log4rs = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio","postgres","chrono"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
hyper = "1.5.2"
http-body = "1.0.1"
bytes = "1.9.0"
async-trait = "0.1.83"
serde_json = "1.0.134"
config = "0.15.4"
log = "0.4.22"
rsa = "0.9.7"
rand = "0.8.5"
base64 = "0.22.1"
