[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["default"]}
matchit = "0.8.4"
hyper = "1.5.2"
log = "0.4.22"
tokio = { version = "1.43.0", features = ["full"]}
http-body = "1.0.1"
bytes = "1.9.0"
serde_json = { version = "1.0.135" }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"]}
rand = "0.8.5"
base64 = "0.22.1"
rsa = "0.9.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "chrono", "postgres"]}
log4rs = "1.3.0"
config = "0.15.5"
tower = "0.5.2"
trait-variant = "0.1.2"
thiserror = "2.0.11"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"]}

[lib]
proc-macro = true